--- a/admin/images.html
+++ b/admin/images.html
@@ -266,56 +266,56 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote'); 
   const projectName = urlParams.get('project');
-  var loadImageTable = true;
   var selectList = "";
   var operationNumber = "";
   var imageToUpdate = "";
 
-  function operationStatusCheck(data){
-    var operationData = JSON.parse(data);
-    console.log(operationData);
-    if (operationData.error_code == 404){ //remains status code 200 throughout download
-      operationNumber = "";
-      $('#spinner').hide();
-    } else {
-      if (operationData.status_code == 200){
-        if (operationData.metadata.status_code >= 400){
-          alert(operationData.metadata.err);
+  function operationStatusCheck(){
+    if (operationNumber != ""){
+      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , function (data) {
+        var operationData = JSON.parse(data);
+        console.log(operationData);
+        if (operationData.error_code == 404) { 
+          operationNumber = "";
+          $('#spinner').hide();
+          reloadPageContent();
+        } 
+        if (operationData.status_code == 200) {
+          if (operationData.metadata.status_code == 200){
+            operationNumber = "";
+            $('#spinner').hide();
+            reloadPageContent();
+          }
+          if (operationData.metadata.status_code >= 400){
+            operationNumber = "";
+            $('#spinner').hide(); 
+            alert(operationData.metadata.err);
+            reloadPageContent();
+          }
         }
-      }
+      }); 
+    }
+    if (operationNumber != "") {
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     }
   }
-
+ 
   function loadPageContent(){
-    //Check the status of an operation if running
-    if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , operationStatusCheck); 
-    }
-    
-    if (loadImageTable == false){
-      $('#imageListTable').DataTable().ajax.reload();
-    }
-
-    if (loadImageTable == true){
-      $('#imageListTable').DataTable( {
-        ajax: "./php/lxd/image-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
-        columns: [
-          {},
-          { title: "Description" },
-          { title: "Fingerprint" },
-          { title: "Type" },
-          { title: "Size" },
-          { title: "Action" }
-        ],
-        order: [],
-        columnDefs: [
-          { targets: 0, orderable: false, width: "25px" }
-        ]
-      });
-      loadImageTable = false;
-    }
-
-
+     $('#imageListTable').DataTable( {
+      ajax: "./php/lxd/image-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
+      columns: [
+        {},
+        { title: "Description" },
+        { title: "Fingerprint" },
+        { title: "Type" },
+        { title: "Size" },
+        { title: "Action" }
+      ],
+      order: [],
+      columnDefs: [
+        { targets: 0, orderable: false, width: "25px" }
+      ]
+    });
 
     //Load the select List for Download Image Modal
     $.get("./php/lxd/simplestreams-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName), function (data) {
@@ -324,7 +324,18 @@
         selectList = data;
       }
     });
+  }
+    
+  function reloadPageContent() {
+    $('#imageListTable').DataTable().ajax.reload();
 
+    //Load the select List for Download Image Modal
+    $.get("./php/lxd/simplestreams-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName), function (data) {
+      if (selectList != data){  
+        $("#selectRepoInput").html(data);
+        selectList = data;
+      }
+    });
   }
 
   //API uses async
@@ -340,7 +351,7 @@
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
-      loadPageContent();
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -357,7 +368,7 @@
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
-      loadPageContent();
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -377,7 +388,7 @@
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
-      loadPageContent();
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -406,10 +417,9 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
-
 
   $(document).ready(function(){
 
@@ -424,8 +434,8 @@
     //Load the card contents
     loadPageContent();
 
-    //Set page reload every 4 seconds
-    setInterval(function(){loadPageContent()}, 4000);
+    //Set page reload every 15 seconds
+    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
