--- a/admin/instances.html
+++ b/admin/instances.html
@@ -247,57 +247,60 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote');
   const projectName = urlParams.get('project');
-  var loadInstanceTable = true;
   var operationNumber = "";
 
-
-  function operationStatusCheck(data){
-    var operationData = JSON.parse(data);
-    console.log(operationData);
-    if (operationData.error_code == 404){ 
-      operationNumber = "";
-      $('#spinner').hide();
-    } else {
-      if (operationData.status_code == 200){
-        if (operationData.metadata.status_code >= 400){
-          alert(operationData.metadata.err);
-        }
-      }
-    }
-  }
-
-  function loadPageContent(){
-    
+  function operationStatusCheck(){
     if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , operationStatusCheck); 
+      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , function (data) {
+        var operationData = JSON.parse(data);
+        console.log(operationData);
+        if (operationData.error_code == 404) { 
+          operationNumber = "";
+          $('#spinner').hide();
+          reloadPageContent();
+        } 
+        if (operationData.status_code == 200) {
+          if (operationData.metadata.status_code == 200){
+            operationNumber = "";
+            $('#spinner').hide();
+            reloadPageContent();
+          }
+          if (operationData.metadata.status_code >= 400){
+            operationNumber = "";
+            $('#spinner').hide(); 
+            alert(operationData.metadata.err);
+            reloadPageContent();
+          }
+        }
+      }); 
     }
-    
-    if (loadInstanceTable == false){
-      $('#instanceListTable').DataTable().ajax.reload();
+    if (operationNumber != "") {
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     }
-
-    if (loadInstanceTable == true){
-      $('#instanceListTable').DataTable( {
-        ajax: "./php/lxd/instance-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
-        columns: [
-          {},
-          { title: "Name" },
-          { title: "Image" },
-          { title: "Type" },
-          { title: "Architecture" },
-          { title: "Status" },
-          { title: "Action" }
-        ],
-        order: [],
-        columnDefs: [
-          { targets: 0, orderable: false, width: "25px" }
-        ]
-      });
-      loadInstanceTable = false;
-    }
-
+  }
+  
+  function loadPageContent(){
+    $('#instanceListTable').DataTable( {
+      ajax: "./php/lxd/instance-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
+      columns: [
+        {},
+        { title: "Name" },
+        { title: "Image" },
+        { title: "Type" },
+        { title: "Architecture" },
+        { title: "Status" },
+        { title: "Action" }
+      ],
+      order: [],
+      columnDefs: [
+        { targets: 0, orderable: false, width: "25px" }
+      ]
+    });
   }
 
+  function reloadPageContent(){
+    $('#instanceListTable').DataTable().ajax.reload();
+  }
 
   function createInstance(){
     var instanceName = $("#instanceNameInput").val();
@@ -318,6 +321,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -333,6 +337,7 @@
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -348,6 +353,7 @@
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
       }
+      setTimeout(() => { operationStatusCheck(); }, 4000);
     });
   }
 
@@ -355,7 +361,6 @@
     var imageType = $("#selectTypeInput").val();
     $("#selectImageInput").load("./php/lxd/image-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName)+ "&image_type=" + encodeURI(imageType));
   }
-
 
   $(document).ready(function(){
 
@@ -375,8 +380,8 @@
     changeImageInput();
     $("#selectProfileInput").load("./php/lxd/profile-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
-    //Set page reload every 4 seconds
-    setInterval(function(){loadPageContent()}, 4000);
+    //Set page reload every 15 seconds
+    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
