--- a/admin/networks.html
+++ b/admin/networks.html
@@ -310,54 +310,31 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote'); 
   const projectName = urlParams.get('project'); 
-  var loadNetworkTable = true;
-  var operationNumber = "";
   var networkToUpdate = "";
 
-  function operationStatusCheck(data){
-    var operationData = JSON.parse(data);
-    console.log(operationData);
-    if (operationData.error_code == 404 || operationData.status_code == 200){
-      operationNumber = "";
-      $('#spinner').hide();
-    }
-    if (operationData.metadata.status_code >= 400){
-      alert(operationData.metadata.err);
-    }
-  }
-
   function loadPageContent(){
-    //Check the status of an operation if running
-    if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , operationStatusCheck); 
-    }
-
-    if (loadNetworkTable == false){
-      $('#networkListTable').DataTable().ajax.reload();
-    }
-
-    if (loadNetworkTable == true){
-      $('#networkListTable').DataTable( {
-        ajax: "./php/lxd/network-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
-        columns: [
-          {},
-          { title: "Name" },
-          { title: "Description" },
-          { title: "Type" },
-          { title: "Managed" },
-          { title: "Action" }
-        ],
-        order: [],
-        columnDefs: [
-          { targets: 0, orderable: false, width: "25px" }
-        ]
-      });
-      loadNetworkTable = false;
-    }
-
+    $('#networkListTable').DataTable( {
+      ajax: "./php/lxd/network-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
+      columns: [
+        {},
+        { title: "Name" },
+        { title: "Description" },
+        { title: "Type" },
+        { title: "Managed" },
+        { title: "Action" }
+      ],
+      order: [],
+      columnDefs: [
+        { targets: 0, orderable: false, width: "25px" }
+      ]
+    });
   }
 
+  function reloadPageContent() {
+    $('#networkListTable').DataTable().ajax.reload();
+  }
 
+  //API uses sync
   function createNetworkForm(){
     var networkNameCreate = $("#networkNameCreate").val();
     var networkDescriptionCreate = $("#networkDescriptionCreate").val();
@@ -368,10 +345,9 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);  
     });
   }
-
 
   //API uses sync
   function createNetworkJson(){
@@ -383,7 +359,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -403,6 +379,7 @@
     });
   }
 
+  //API uses sync
   function updateNetwork(){
     var networkUpdateJSON = $("#jsonEditInput").val();
     console.log("Info: updating network " + networkToUpdate);
@@ -412,7 +389,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -425,7 +402,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -438,11 +415,9 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
-
-
 
   $(document).ready(function(){
 
@@ -457,15 +432,13 @@
     //Load the card contents
     loadPageContent();
 
-    //Set page reload every 4 seconds
-    setInterval(function(){loadPageContent()}, 4000);
+    //Set page reload every 15 seconds
+    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
   });
-
-
 
 </script>
 
