--- a/admin/projects.html
+++ b/admin/projects.html
@@ -244,53 +244,29 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote');
   const projectName = urlParams.get('project');
-  var loadProjectTable = true;
-  var operationNumber = "";
   var projectToUpdate = "";
 
-  function operationStatusCheck(data){
-    var operationData = JSON.parse(data);
-    console.log(operationData);
-    if (operationData.error_code == 404 || operationData.status_code == 200){
-      operationNumber = "";
-      $('#spinner').hide();
-    }
-    if (operationData.metadata.status_code >= 400){
-      alert(operationData.metadata.err);
-    }
+  function loadPageContent(){
+    $('#projectListTable').DataTable( {
+      ajax: "./php/lxd/project-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
+      columns: [
+        {},
+        { title: "Name" },
+        { title: "Description" },
+        { title: "Features Images" },
+        { title: "Features Profiles" },
+        { title: "Features Storage Volumes" },
+        { title: "Action" }
+      ],
+      order: [],
+      columnDefs: [
+        { targets: 0, orderable: false, width: "25px" }
+      ]
+    });
   }
 
-  function loadPageContent(){
-    //Check the status of an operation if running
-    if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , operationStatusCheck); 
-    }
-    
-    if (loadProjectTable == false){
-      $('#projectListTable').DataTable().ajax.reload();
-    }
-
-    if (loadProjectTable == true){
-      $('#projectListTable').DataTable( {
-        ajax: "./php/lxd/project-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
-        columns: [
-          {},
-          { title: "Name" },
-          { title: "Description" },
-          { title: "Features Images" },
-          { title: "Features Profiles" },
-          { title: "Features Storage Volumes" },
-          { title: "Action" }
-        ],
-        order: [],
-        columnDefs: [
-          { targets: 0, orderable: false, width: "25px" }
-        ]
-      });
-      loadProjectTable = false;
-    }
-
-
+  function reloadPageContent(){
+    $('#projectListTable').DataTable().ajax.reload();
   }
 
   //API uses sync
@@ -303,7 +279,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -323,7 +299,6 @@
     });
   }
 
-
   function updateProject(){
     var projectUpdateJSON = $("#jsonInput").val();
     console.log("Info: updating project " + projectToUpdate);
@@ -333,7 +308,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -346,7 +321,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -368,8 +343,8 @@
     $("#selectImageInput").load("./php/lxd/image-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#selectProfileInput").load("./php/lxd/profile-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
 
-    //Set page reload every 4 seconds
-    setInterval(function(){loadPageContent()}, 4000);
+    //Set page reload every 15 seconds
+    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
