--- a/admin/storage-volumes.html
+++ b/admin/storage-volumes.html
@@ -247,52 +247,28 @@
   const remoteName = urlParams.get('remote'); 
   const projectName = urlParams.get('project');
   const storagePoolName = urlParams.get('pool');  
-  var loadStorageVolumeTable = true;
-  var operationNumber = "";
   var storageVolumeToUpdate = "";
 
-  function operationStatusCheck(data){
-    var operationData = JSON.parse(data);
-    console.log(operationData);
-    if (operationData.error_code == 404 || operationData.status_code == 200){
-      operationNumber = "";
-      $('#spinner').hide();
-    }
-    if (operationData.metadata.status_code >= 400){
-      alert(operationData.metadata.err);
-    }
-  }
-
   function loadPageContent(){
-    //Check the status of an operation if running
-    if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , operationStatusCheck); 
-    }
-    
-    if (loadStorageVolumeTable == false){
-      $('#storageVolumeListTable').DataTable().ajax.reload();
-    }
-
-    if (loadStorageVolumeTable == true){
-      $('#storageVolumeListTable').DataTable( {
-        ajax: "./php/lxd/storage-volume-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&pool=" + encodeURI(storagePoolName),
-        columns: [
-          {},
-          { title: "Name" },
-          { title: "Type" },
-          { title: "Used by" },
-          { title: "Action" }
-        ],
-        order: [],
-        columnDefs: [
-          { targets: 0, orderable: false, width: "25px" }
-        ]
-      });
-      loadStorageVolumeTable = false;
-    }
-
+    $('#storageVolumeListTable').DataTable( {
+      ajax: "./php/lxd/storage-volume-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&pool=" + encodeURI(storagePoolName),
+      columns: [
+        {},
+        { title: "Name" },
+        { title: "Type" },
+        { title: "Used by" },
+        { title: "Action" }
+      ],
+      order: [],
+      columnDefs: [
+        { targets: 0, orderable: false, width: "25px" }
+      ]
+    });
   }
 
+  function reloadPageContent(){
+    $('#storageVolumeListTable').DataTable().ajax.reload();
+  }
 
   //API uses sync, NOT YET SETUP
   function createStorageVolume(){
@@ -304,7 +280,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -324,6 +300,7 @@
     });
   }
 
+  //API uses sync
   function updateStorageVolume(){
     var storageVolumeUpdateJSON = $("#jsonEditInput").val();
     console.log("Info: updating storage volume " + storageVolumeToUpdate);
@@ -333,7 +310,7 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
 
@@ -346,10 +323,9 @@
       if (operationData.error_code >= 400){
         alert(operationData.error);
       }
-      loadPageContent();
+      setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
-
 
 
   $(document).ready(function(){
@@ -367,8 +343,8 @@
     //Load the card contents
     loadPageContent();
 
-    //Set page reload every 4 seconds
-    setInterval(function(){loadPageContent()}, 4000);
+    //Set page reload every 15 seconds
+    setInterval(function(){reloadPageContent()}, 15000);
 
     $("#remoteListNav").load("./php/lxd/remote-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
     $("#projectListNav").load("./php/lxd/project-list-nav.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName));
