--- a/admin/profiles.html
+++ b/admin/profiles.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/png" href="theme/images/logo-white.png">
+  <link rel="icon" type="image/png" href="theme/images/cube.png">
 
   <title>LXDWARE</title>
 
@@ -321,6 +321,7 @@
         {},
         { title: "Name" },
         { title: "Description" },
+        { title: "Devices" },
         { title: "Action" }
       ],
       order: [],
